# poc-agent-local

./: .gitignore  README.md  pyproject.toml
classificador_poc/: _aws_sample.py  _bedrock.py  _faiss.py  _langchain.py  _langgraph.py  _lg_with_memory.py  _zilliz_sample.py  main.py  utils.py
docs/: Era100.txt  Tabela_NCM_Vigente_20250415_concatenada.json  Tabela_NCM_Vigente_20250415_hierarquico.json
